@@ -37,9 +37,10 @@ Back-compat investigation / known issues:
        Catalyst::Dispatcher::_do_forward does not fix arguments if you throw
        an exception. Needs a test case (Caelum)
      
-     - Catalyst::Plugin::Authentication::Store::DBIC fails as
-       overriding the setup_finished class data method in a plugin no longer
-       works correctly (see t/cdi_backcompat_accessor_override.t).
+     - Catalyst::Plugin::Authentication::Store::DBIC relies on 
+       hooking the setup_finished class data method in a plugin
+       (see t/cdi_backcompat_accessor_override.t).
+       Is this insane / should we support this?
 
   - Issues with TWMC not being loaded when it used to be in 5.70 
     (Bill Moseley)
